vh fixed, working version, extra space at bottom, to be fixed

--- a/style.scss
+++ b/style.scss
@@ -65,9 +65,8 @@ section {
     z-index: -1;
 }
 
-.behind {
-    position: relative;
-    z-index: -1;
+.block {
+    height: 50vh;
 }
 
 
